fix scrollbar styling

--- a/src/client/public/stylesheets/components/drawer.scss
+++ b/src/client/public/stylesheets/components/drawer.scss
@@ -6,8 +6,13 @@ $drawer-width: 600px;
   right: 0;
   width: $drawer-width;
   height: inherit;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   z-index: 1;
+}
+
+.drawer::-webkit-scrollbar {
+  background-color: white;
 }
 
 .background-greyout.bg-fade-in {
